changed the css for the header bar to appear correctly on mobile

--- a/css/class5.css
+++ b/css/class5.css
@@ -82,7 +82,7 @@ width:100%;
         z-index: 1;
         background-color: white;
         overflow: auto;
-        height: 50px;
+        height: auto;
         text-align: center;
 
           }
@@ -107,9 +107,10 @@ ul {
 
 
  li {
-         display: inline;
-         padding: 0px 20px 0px 20px;
+
+         padding: 0px 0px 10px 0px;
          font-weight: bold;
+         list-style-type: none;
 }
 
 
@@ -482,6 +483,30 @@ to {opacity:0;}
         display: block;
     }
 
+.main-nav {
+        width: 100%;
+        position: sticky;
+        box-shadow: 0 3px 6px rgb(0,0,0,0.4);
+        top: 0;
+        z-index: 1;
+        background-color: white;
+        overflow: auto;
+        height: auto;
+        text-align: center;
+
+
+          }
+
+ ul {
+
+}
+
+
+ li {
+         display: inline;
+         padding: 0px 20px 0px 20px;
+         font-weight: bold;
+}
          
     }
 
